# capril-financas-api

./: .dockerignore  .funcignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  function_app.py  host.json  initial_data.py  local.settings.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main_capril-api(dev).yml  main_capril-api.yml  main_capril-financas-api.yml  main_capril-financas.yml
app/: __init__.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py
app/core/: config.py  db.py
app/routes/: clientes.py  compras.py  fornecedores.py  login.py  produtos.py  vendas.py
tests/: test_main.py
