[project]
name = "capril-financas-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.24.0",
    "bcrypt<4.1.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.121.3",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.8.0,<3.0.0",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
